.metadata/.plugins/org.eclipse.cdt.ui/stringdatabase.build.log
20:04:29 **** Build of configuration Debug for project stringdatabase ****
make all 
Building file: ../src/string_database.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -pthread -I"/home/christopher/Desktop/String_Parser/datastore" -O0 -g3 -Wall -std=c++11 -MMD -MP -MF"src/string_database.d" -MT"src/string_database.o" -o "src/string_database.o" "../src/string_database.cpp"
../src/string_database.cpp:1:9: warning: #pragma once in main file
 #pragma once
         ^
../src/string_database.cpp: In member function ‘void String_Database::add(std::__cxx11::string&)’:
../src/string_database.cpp:19:14: error: no matching function for call to ‘String_Data::String_Data()’
  String_Data Value;
              ^
In file included from ../src/string_database.cpp:5:0:
../src/../../datastore/includes/string_data.h:20:2: note: candidate: String_Data::String_Data(std::__cxx11::string, int)
  String_Data(std::string data, int useCount=1);
  ^
../src/../../datastore/includes/string_data.h:20:2: note:   candidate expects 2 arguments, 0 provided
../src/../../datastore/includes/string_data.h:17:2: note: candidate: String_Data::String_Data(const String_Data&)
  String_Data(const String_Data &other);
  ^
../src/../../datastore/includes/string_data.h:17:2: note:   candidate expects 1 argument, 0 provided
../src/string_database.cpp:20:7: error: no match for ‘operator=’ (operand types are ‘String_Data’ and ‘String_Data*’)
  Value= new String_Data(myString);
       ^
In file included from ../src/string_database.cpp:5:0:
../src/../../datastore/includes/string_data.h:12:21: note: candidate: const String_Data& String_Data::operator=(const String_Data&)
  const String_Data &operator=(const String_Data &other);
                     ^
../src/../../datastore/includes/string_data.h:12:21: note:   no known conversion for argument 1 from ‘String_Data*’ to ‘const String_Data&’
../src/string_database.cpp:21:15: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i=0;i<myStrings.size();i++){
               ^
../src/string_database.cpp: In member function ‘int String_Database::getCount(std::__cxx11::string&)’:
../src/string_database.cpp:35:15: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i=0;i<myStrings.size();i++){
               ^
../src/string_database.cpp: In member function ‘bool String_Database::save(DataStore*)’:
../src/string_database.cpp:63:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/string_database.o] Error 1
src/subdir.mk:18: recipe for target 'src/string_database.o' failed

20:04:31 Build Finished (took 1s.629ms)

